--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--forEach into JSP-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
