--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -5,3 +5,6 @@
 database.url=jdbc:postgresql://localhost:5432/topjava
 database.username=topjava
 database.password=_temporant_
+
+database.init=true
+
