--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>2.3.4</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
 
 
