--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -5,7 +5,7 @@ database.driverClassName=org.postgresql.Driver
 
 database.init=true
 
-jdbc.initLocation=initDB_hsql.sql
+jdbc.initLocation=initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
