--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -1,7 +1,7 @@
 database.url=jdbc:postgresql://localhost:5432/topjava
 database.username=topjava
 database.password=_temporant_
-database.driverClassName=org.postgresql.Driver
+#database.driverClassName=org.postgresql.Driver
 
 database.init=true
 
