--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <spring-data-jpa.version>1.11.6.RELEASE</spring-data-jpa.version>
 
         <!--DB-->
         <postgresql.version>42.2.9</postgresql.version>
@@ -93,7 +94,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
+<!--            <version>${spring.version}</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -102,9 +103,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
         <!--DataBase-->
@@ -173,7 +174,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
+<!--            <version>${spring.version}</version>-->
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -230,5 +231,14 @@
     </profiles>
 
     <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
