--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>3.0.0-M1</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=UTF-8</argLine>
-                    <skipTests>true</skipTests>
+<!--                    <argLine>-Dfile.encoding=UTF-8</argLine>-->
+<!--                    <skipTests>true</skipTests>-->
                 </configuration>
             </plugin>
         </plugins>
