--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
-                    <skipTests>true</skipTests>
+<!--                    <skipTests>true</skipTests>-->
                 </configuration>
             </plugin>
         </plugins>
@@ -198,13 +198,6 @@
             <version>3.8.0</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.8.0</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <profiles>
@@ -214,7 +207,8 @@
                 <dependency>
                     <groupId>org.hsqldb</groupId>
                     <artifactId>hsqldb</artifactId>
-                    <version>2.3.4</version>
+                    <version>2.5.0</version>
+<!--                    <scope>test</scope>-->
                 </dependency>
             </dependencies>
         </profile>
