--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,13 @@
             <version>18.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
