--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring-data-jpa.version>1.11.6.RELEASE</spring-data-jpa.version>
+        <jackson-json.version>2.9.0</jackson-json.version>
 
         <!--DB-->
         <postgresql.version>42.2.9</postgresql.version>
@@ -252,6 +253,13 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-json.version}</version>
         </dependency>
 
         <!--Test-->
