--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring-data-jpa.version>1.11.6.RELEASE</spring-data-jpa.version>
+        <spring-security.version>4.2.3.RELEASE</spring-security.version>
         <jackson-json.version>2.9.0</jackson-json.version>
 
         <!--DB-->
@@ -183,6 +184,18 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring-data-jpa.version}</version>
+        </dependency>
+
+        <!--security-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring-security.version}</version>
         </dependency>
 
         <!--DataBase-->
