--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -35,3 +35,4 @@ common.saved=Record saved
 common.enabled=Record enabled
 common.disabled=Record disabled
 common.errorStatus=Error status
+common.appError=Application error
