--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -36,3 +36,5 @@ common.enabled=Record enabled
 common.disabled=Record disabled
 common.errorStatus=Error status
 common.appError=Application error
+
+exception.user.duplicateEmail=User with this email already exists
