--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -38,3 +38,4 @@ common.errorStatus=Error status
 common.appError=Application error
 
 exception.user.duplicateEmail=User with this email already exists
+exception.meal.duplicateDateTime=You already have meal with this date/time
